--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,26 @@
-version: "3"
+version: "3.8"
+
 services:
   db:
     image: postgres:15
     environment:
-      - POSTGRES_USER=adal
-      - POSTGRES_PASSWORD=yerlan
-      - POSTGRES_DB=market_db
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
   app:
     build: .
     ports:
       - "8080:8080"
-  # red:
-  #   image: redis:latest
-  #   environment:
-  #     - REDIS_PASSWORD=
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+    depends_on:
+      - db
