fix(docker): add exchange1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   db:
     image: postgres:15
+    container_name: db
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
@@ -11,9 +12,20 @@ services:
       - "5432:5432"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - marketnet
+
+  exchange1:
+    image: exchange1
+    container_name: exchange1
+    ports:
+      - "40101:40101"
+    networks:
+      - marketnet
 
   app:
     build: .
+    container_name: app
     ports:
       - "8080:8080"
     environment:
@@ -24,3 +36,10 @@ services:
       - DB_NAME=${DB_NAME}
     depends_on:
       - db
+      - exchange1
+    networks:
+      - marketnet
+
+networks:
+  marketnet:
+    driver: bridge
